# docsample

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  structure.ini
docs/: api.rst  conf.py  index.rst  notebooks.rst  requirements.txt  usage.rst
docs/notebooks/: index.rst
src/docsample/: __init__.py  cli_tool.py  core.py
