[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "docsample"
version = "0.1.0"
description = "A Python project template with library, CLI, notebook, and Sphinx docs."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
docsample-cli = "docsample.cli_tool:main"

[project.optional-dependencies]
docs = [
    "Sphinx",
    "sphinx-rtd-theme",
    "nbsphinx",
    "ipython",
    "jupyter"
]

[tool.sphinx]
project = "ECMWF docsample"